// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link examples AlternateLinkComponent should render correctly 1`] = `
<div
  id="root0"
>
  <a
    class="v-alternate v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
    valternate=""
  >
    Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-0"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
</div>
`;

exports[`Link examples ButtonAsDisabledLinkLinkComponent should render correctly 1`] = `
<div
  id="root1"
>
  <button
    aria-disabled="true"
    class="v-link v-link-no-underline"
    disabled=""
    nounderline=""
    role="link"
    v-link=""
  >
     Print 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-device-printer v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-1"
      v-icon-visa-device-printer-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M10 10H6V14H10V10ZM4 8V16H12V8H4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M4 2H12V4H4V2ZM2 4.18359V0H14V4.18359H16V12.1836H14V6.18359H2V12.1836H0V4.18359H2Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Link examples ButtonAsLinkLinkComponent should render correctly 1`] = `
<div
  id="root2"
>
  <button
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
     Print 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-device-printer v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-2"
      v-icon-visa-device-printer-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        clip-rule="evenodd"
        d="M10 10H6V14H10V10ZM4 8V16H12V8H4Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M4 2H12V4H4V2ZM2 4.18359V0H14V4.18359H16V12.1836H14V6.18359H2V12.1836H0V4.18359H2Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </button>
</div>
`;

exports[`Link examples DefaultLinkComponent should render correctly 1`] = `
<div
  id="root3"
>
  <a
    class="v-link"
    href="./components/link"
    v-link=""
  >
    Destination label
  </a>
</div>
`;

exports[`Link examples DisabledLinkComponent should render correctly 1`] = `
<div
  id="root4"
>
  <a
    aria-disabled="true"
    class="v-link"
    disabled=""
    role="link"
    v-link=""
  >
    Destination label.
  </a>
</div>
`;

exports[`Link examples InlineLinkComponent should render correctly 1`] = `
<div
  id="root5"
>
  <p>
     This is a sentence with an inline 
    <a
      class="v-link"
      href="./components/link"
      v-link=""
    >
      destination label.
    </a>
  </p>
</div>
`;

exports[`Link examples LinkOpenInNewTab should render correctly 1`] = `
<div
  id="root8"
>
  <a
    aria-label="Destination label (opens in new tab)"
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    rel="noopener noreferrer"
    target="blank"
    v-link=""
    vopensinnewtab=""
  >
     Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-maximize v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-5"
      v-icon-visa-maximize-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M14 6H16L16 0H10V2L12.5393 2L6 8.54302L7.45688 9.99991L14 3.46442V6Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M0 1H8V3H2V14H13V8H15V16H0V1Z"
        fill-rule="evenodd"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
  </a>
</div>
`;

exports[`Link examples LinkWithLeadingIconComponent should render correctly 1`] = `
<div
  id="root6"
>
  <a
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-arrow-back v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-3"
      v-icon-visa-arrow-back-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        d="M3.91838 7.00159L9.21132 1.70865L7.7971 0.294434L0.0899963 8.00154L7.7971 15.7086L9.21132 14.2944L3.91847 9.00159H16.0042V7.00159H3.91838Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     Destination label

  </a>
</div>
`;

exports[`Link examples LinkWithTrailingIconComponent should render correctly 1`] = `
<div
  id="root7"
>
  <a
    class="v-link v-link-no-underline"
    href="./components/link"
    nounderline=""
    v-link=""
  >
     Destination label 
    <svg
      aria-hidden="true"
      class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      id="a-v__icon__internal-4"
      v-icon-visa-chevron-right-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
</div>
`;

exports[`Link examples WithoutUnderlineLinkComponent should render correctly 1`] = `
<div
  id="root9"
>
  <p>
     This is a sentence with an inline 
    <a
      class="v-link v-link-no-underline"
      href="./components/link"
      nounderline=""
      v-link=""
    >
      destination label 
      <svg
        aria-hidden="true"
        class="v-icon v-icon-maximize v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        id="a-v__icon__internal-6"
        v-icon-visa-maximize-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M14 6H16L16 0H10V2L12.5393 2L6 8.54302L7.45688 9.99991L14 3.46442V6Z"
        />
        <path
          class="v-icon-primary"
          clip-rule="evenodd"
          d="M0 1H8V3H2V14H13V8H15V16H0V1Z"
          fill-rule="evenodd"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </a>
  </p>
</div>
`;
